[package]
name = "formsbox-stress-test-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
md5 = "0.7"

